tests/golden/errors/dict_changed_size.py
d: dict[int, int] = {}
for i in range(3):
    d[i] = i
for k in d:
    d[99] = 1
